crates/plotnik-lib/tests/02-parser/recovery_incomplete/type_name_invalid_token_after.txt
(identifier) @name :: (
------------------ DIAGNOSTICS -------------------
error: expected a type name after `::`
 --> query.ptk:1:23
  |
1 | (identifier) @name :: (
  |                       ^
  |
help: e.g., `::MyType`
